
module(name = "com_github_mvukov_rules_ros2")

bazel_dep(name = "bazel_skylib", version = "1.7.1")


bazel_dep(
    name = "rules_ros2_pip_deps",
)

bazel_dep(
    name = "ros2cli",
)

bazel_dep(
    name = "ros2_launch_ros",
)

bazel_dep(
    name = "ros2_launch",
)

bazel_dep(
    name = "ros2_ament_cmake_ros",
)

bazel_dep(
    name = "ros2_rosbag2",
)